--- a/src/main/webapp/WEB-INF/html/portfoliolist.html
+++ b/src/main/webapp/WEB-INF/html/portfoliolist.html
@@ -2,36 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-<title>Matrix - Responsive Tile-Based Template</title>
-<link href="style.css" title="style" rel="stylesheet" type="text/css" />
-<link id="clink" href="css/style-blue.css" title="style" rel="stylesheet" type="text/css" media="screen" />
-<script src="scripts/jquery.min.js" type="text/javascript"></script>
-<script src="scripts/jquery.masonry.min.js" type="text/javascript"></script>
-<script src="scripts/jquery.easing.1.3.js" type="text/javascript"></script>
-<script src="scripts/MetroJs.lt.js" type="text/javascript"></script>
-<script src="scripts/jquery.fancybox-1.3.4.js" type="text/javascript" charset="utf-8"></script>
-<script src="scripts/jquery.flexslider-min.js" type="text/javascript" charset="utf-8"></script>
-<script src="scripts/hoverintent.js" type="text/javascript" charset="utf-8"></script>
-<script src="scripts/organictabs.jquery.js" type="text/javascript" charset="utf-8"></script>
+	<title>Matrix - Responsive Tile-Based Template</title>
+	<%@ include file="../base.jsp"%>
 
-<!--[if lt IE 9]>
-  <style type="text/css">
-  @import url("style-ie8.css");
-  </style>
-  <script src="scripts/css3-mediaqueries.js" type="text/javascript" charset="utf-8"></script>
-  <script>
-    document.createElement('header');
-    document.createElement('nav');
-    document.createElement('section');
-    document.createElement('article');
-    document.createElement('aside');
-    document.createElement('footer');
-    document.createElement('hgroup');
-    </script>
-<![endif]-->
-<script src="scripts/javascript.js" type="text/javascript"></script>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+</head>
 <body>
 <div id="bodypat">
 <section id="container">
